--- a/src/package.json
+++ b/src/package.json
@@ -3,5 +3,12 @@
       "next": "^12.1.0",
       "react": "^17.0.2",
       "react-dom": "^17.0.2"
+   },
+   "homepage": "https://shawaksaraf.github.io",
+   "scripts": {
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build",
+      "start": "react-scripts start",
+      "build": "react-scripts build"
    }
 }
