--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "noisejs": "^2.1.0",
     "parcel": "^2.8.3",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.2.0",
     "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
