--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
+    "react-spring": "^9.7.1",
+    "react-use-gesture": "^9.1.3",
     "shader-park-core": "^0.1.38",
     "three": "^0.150.1",
     "web-vitals": "^2.1.4",
